--- a/EcommerceMicroservices/Stock.API/Stock.API.csproj
+++ b/EcommerceMicroservices/Stock.API/Stock.API.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-rc.1.efcore.9.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
