--- a/EcommerceMicroservices/API.Gateway/appsettings.json
+++ b/EcommerceMicroservices/API.Gateway/appsettings.json
@@ -2,8 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Ocelot": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "JwtSettings": {
+    "SecretKey": "your_super_secret_key_32_chars_long",
+    "Issuer": "EcommerceMicroservices",
+    "Audience": "EcommerceUsers",
+    "ExpirationMinutes": 60
+  }
 }
