feat: Implementada Stock.API com Entity Framework
- Criado modelo de produto com validação
- Implementada StockContext com configuração de DbSet
- Adicionado ProductsController com operações CRUD
- Configurado conexão MySQL e autenticação JWT
- Adicionada validação de estoque e atualizar endpoint

--- a/EcommerceMicroservices/Stock.API/appsettings.json
+++ b/EcommerceMicroservices/Stock.API/appsettings.json
@@ -2,8 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+  "DefaultConnection": "Server=localhost;Database=study_projects;User=developer;Password=Luke@2020;"
+  },
+  "JwtSettings": {
+    "SecretKey": "your_super_secret_key_32_chars_long",
+    "Issuer": "EcommerceMicroservices",
+    "Audience": "EcommerceUsers",
+    "ExpirationMinutes": 60
+  }
 }
