feat: atualizdo a configuração do banco de dados para stock_db

--- a/EcommerceMicroservices/Stock.API/appsettings.json
+++ b/EcommerceMicroservices/Stock.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-  "DefaultConnection": "Server=localhost;Database=study_projects;User=developer;Password=Luke@2020;"
+  "DefaultConnection": "Server=localhost;Database=stock_db;User=developer;Password=Luke@2020;"
   },
   "JwtSettings": {
     "SecretKey": "your_super_secret_key_32_chars_long",
