feat: Implementação completa Sales.API com JWT e Entity Framework
- Models: Order/OrderItem com business logic
- Controller: CRUD completo com validações
- EF: Context, migrations e seed data
- Services: Comunicação HTTP com Stock.API
- RabbitMQ: Publisher para eventos
- DTOs: Correção referências circulares JSON
- JWT: Authentication integrado
- MySQL: Configuração completa

--- a/EcommerceMicroservices/Sales.API/appsettings.Development.json
+++ b/EcommerceMicroservices/Sales.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=sales_db;User=developer;Password=Luke@2020;"
   }
 }
