--- a/EcommerceMicroservices/Sales.API/appsettings.json
+++ b/EcommerceMicroservices/Sales.API/appsettings.json
@@ -2,8 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=sales_db;User=developer;Password=Luke@2020;"
+  },
+  "JwtSettings": {
+    "SecretKey": "your_super_secret_key_32_chars_long",
+    "Issuer": "EcommerceMicroservices",
+    "Audience": "EcommerceUsers",
+    "ExpirationMinutes": 60
+  },
+  "StockApiUrl": "http://localhost:5263/",
   "AllowedHosts": "*"
 }
