--- a/EcommerceMicroservices/Sales.API/appsettings.json
+++ b/EcommerceMicroservices/Sales.API/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sales_db;User=developer;Password=Luke@2020;"
+    "DefaultConnection": "Server=localhost;Database=sales_db;User=developer;Password=Luke@2020;",
+    "RabbitMQ": "amqp://guest:guest@localhost:5672"
   },
   "JwtSettings": {
     "SecretKey": "your_super_secret_key_32_chars_long",
