Atualização sobre arquitetura

--- a/EcommerceMicroservices/API.Gateway/API.Gateway.csproj
+++ b/EcommerceMicroservices/API.Gateway/API.Gateway.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="3.7.0" />
     <PackageReference Include="Ocelot" Version="24.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
@@ -15,5 +16,14 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+      <None Update="ocelot.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="ocelot.SwaggerEndpoints.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 
 </Project>
