--- a/EcommerceMicroservices/API.Gateway/appsettings.json
+++ b/EcommerceMicroservices/API.Gateway/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "SwaggerEndPoints": [
+    {
+      "Key": "stock",
+      "Version": "v1",
+      "Url": "http://stock-api:80/swagger/v1/swagger.json"
+    },
+    {
+      "Key": "sales",
+      "Version": "v1",
+      "Url": "http://sales-api:80/swagger/v1/swagger.json"
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
