--- a/EcommerceMicroservices/Sales.API/appsettings.json
+++ b/EcommerceMicroservices/Sales.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sales_db;User=developer;Password=Luke@2020;",
+  "DefaultConnection": "Server=mysql;Port=3306;Database=sales_db;User=developer;Password=Luke@2020;",
     "RabbitMQ": "amqp://guest:guest@localhost:5672"
   },
   "JwtSettings": {
