Checkpoint from VS Code for coding agent session

--- a/EcommerceMicroservices/API.Gateway/appsettings.json
+++ b/EcommerceMicroservices/API.Gateway/appsettings.json
@@ -3,12 +3,12 @@
     {
       "Key": "stock",
       "Version": "v1",
-      "Url": "http://stock-api:80/swagger/v1/swagger.json"
+  "Url": "http://localhost:5263/swagger/v1/swagger.json"
     },
     {
       "Key": "sales",
       "Version": "v1",
-      "Url": "http://sales-api:80/swagger/v1/swagger.json"
+  "Url": "http://localhost:5285/swagger/v1/swagger.json"
     }
   ],
   "Logging": {
