--- a/EcommerceMicroservices/Stock.API/appsettings.json
+++ b/EcommerceMicroservices/Stock.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-  "DefaultConnection": "Server=mysql;Port=3306;Database=stock_db;User=developer;Password=Luke@2020;",
+  "DefaultConnection": "Server=localhost;Port=3306;Database=stock_db;User=developer;Password=Luke@2020;",
   "RabbitMQ": "amqp://guest:guest@localhost:5672"
   },
   "JwtSettings": {
